-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1143 2011-07-19 05:45:18 guru Exp $
-----------------------------------------------------------------------------------------

2011-07-18	pwessel
	* gmtstitch_func.c:	Warn that segment with a single point will not connect both
				ends properly - you will need to rerun the task on the new
				sets of segments.  We now give a warning.
	* grdhisteq_func.c:	Fixed porting bugs for -D

2011-07-15	pwessel
	* gmt2kml_func.c:	The -C option now also applies to lines or polygons; use
				with -W-|+ to control if cpt is used for fill, outline or
				both.  If no -W then no outline for polygons.
	* gmtconvert_func.c:	Enhanced -I[tsr] to reverse tables, segments or records,
				in any combination [Default -I becomes -Ir].

2011-07-14	pwessel
	* sph/sphtriangulate_func.c:	Passed lon,lat instead of lat,lon to GMT_geo_to_cart
				which would affect the -A option only.
	* gmt_io.c:		Try to minimize size of allocations/reallocations in GMT_read_table
				by adjusting to actual segment sizes found.
-----------------------------------------------------------------------------------------
2011-07-14	pwessel
	NOTE: * GMT 4.5.7 finalized and released.
-----------------------------------------------------------------------------------------
2011-07-14	pwessel
	* pslib.c:		The @-, @+, @# would reset size to the original font size, ignoring
				any changes any @:<size>: sequence would have made.  Also, when
				@:<size>: was used the derived sizes for sub/super were not updated.

2011-07-14	remko
	* pslib.[ch]:		Made PSL_comment a function for WIN32.

2011-07-11	remko
	* website:		Updates ported from GMT4.

2011-07-07	pwessel
	* pscoast_func.c:	Added river groups A and R which equals a and r except they
				do not include the river-lake features (which are plotted
				as polygons anyway).

2011-07-06	pwessel