@@ -1,12 +1,13 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1143 2011-07-19 05:45:18 guru Exp $
+	$Id: ChangeLog,v 1.1144 2011-07-19 05:54:41 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2011-07-18	pwessel
 	* gmtstitch_func.c:	Warn that segment with a single point will not connect both
 				ends properly - you will need to rerun the task on the new
 				sets of segments.  We now give a warning.
-	* grdhisteq_func.c:	Fixed porting bugs for -D
+	* grdhisteq_func.c:	Fixed porting bugs for -D; also allow -D<file> instead of just
+				writing to stdout.
 
 2011-07-15	pwessel
 	* gmt2kml_func.c:	The -C option now also applies to lines or polygons; use
